# zero2prod

./: .dockerfile  Cargo.toml  Dockerfile  spec.yml
.github/workflows/: CI.yml
.sqlx/: query-8aa3a186a00803b6fef4cbcc664eb133309d3e206aefceb344131bd09aa1c475.json
config/: base.toml  production.toml
migrations/: 20240323135723_create_subscribtions_table.sql  20240824161643_add_status_to_subscriptions.sql
scripts/: init_db
src/: config.rs  configuation.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscibtions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
