[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde", "clock"] }
config = "0.14"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = "0.12"

[package.metadata.clippy]
warn = [
    "clippy::pedantic",
    "clippy::nursery",
    "clippy::unwrap_used",
    "clippy::expect_used",
]
