[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde", "clock"] }
config = { version = "0.14", features = ["toml"], default-features = false }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.36", features = [
    "rt",
    "macros",
    "tracing",
    "rt-multi-thread",
] }
uuid = { version = "1.8", features = ["v4", "serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
unicode-segmentation = "1"
claims = "0.7"
validator = "0.16"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[dev-dependencies]
once_cell = "1.19"
fake = "~2.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
wiremock = "0.6"
serde_json = "1"

[package.metadata.clippy]
warn = [
    "clippy::pedantic",
    "clippy::nursery",
    "clippy::unwrap_used",
    "clippy::expect_used",
]
